--- a/quoteapp/templates/quoteapp/add_tag.html
+++ b/quoteapp/templates/quoteapp/add_tag.html
@@ -1,22 +1,20 @@
-{% extends "quoteapp/base.html" %}
-
-{% block content %}
+{% extends "quoteapp/base.html" %} {% block content %}
 
 <form method="POST" action="{% url 'quoteapp:add_tag' %}">
-    {% csrf_token %}
+  {% csrf_token %}
 
-    <div class="form-floating mb-3 col-md-4">
-        {{ form.name }}
-        <label for="{{ form.name.id_for_label }}">Enter the tag name:</label>
-        {% for error in form.name.errors %}
-            <label class="text-danger" for="floatingInputInvalid"> {{ error }}</label>
-        {% endfor %}
-    </div>
+  <div class="form-floating mb-3 col-md-4">
+    {{ form.name }}
+    <label for="{{ form.name.id_for_label }}">Enter the tag name:</label>
+    {% for error in form.name.errors %}
+    <label class="text-danger" for="floatingInputInvalid"> {{ error }}</label>
+    {% endfor %}
+  </div>
 
-    <div class="d-grid gap-2 col-md-4">
-        <button type="submit" class="btn btn-outline-primary">Add tag</button>
-        <button type="reset" class="btn btn-outline-warning">Reset</button>
-    </div>
+  <div class="d-grid gap-2 col-md-4">
+    <button type="submit" class="btn btn-outline-primary">Add tag</button>
+    <button type="reset" class="btn btn-outline-warning">Reset</button>
+  </div>
 </form>
 
 {% endblock %}
