--- a/quoteapp/templates/quoteapp/author_detail.html
+++ b/quoteapp/templates/quoteapp/author_detail.html
@@ -1,14 +1,15 @@
-{% extends "quoteapp/base.html" %}
-
-{% block content %}
+{% extends "quoteapp/base.html" %} {% block content %}
 
 <main>
-    <div style="width: 800px">
-        <h3>{{author.fullname}}</h3>
-        <p><strong>Born:</strong> <span>{{author.born_date}}</span> <span>{{author.born_location}}</span></p>
-        <p><strong>Description:</strong></p>
-        <div style="text-align: justify;">{{author.description}}</div>
-    </div>
+  <div style="width: 800px">
+    <h3>{{author.fullname}}</h3>
+    <p>
+      <strong>Born:</strong> <span>{{author.born_date}}</span>
+      <span>{{author.born_location}}</span>
+    </p>
+    <p><strong>Description:</strong></p>
+    <div style="text-align: justify">{{author.description}}</div>
+  </div>
 </main>
 
 {% endblock %}
