--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,43 +1,39 @@
-{% extends "quoteapp/base.html" %}
-
-{% block content %}
-
+{% extends "quoteapp/base.html" %} {% block content %}
 
 <div class="container">
-    <h2>Sign Up</h2>
-    <form method="post" action="{% url 'users:signup' %}">
-        {% csrf_token %}
-        
-        <div class="form-floating mb-3 col-md-4">
-            {{ form.username }}
-            <label for="{{ form.username.id_for_label }}">Username:</label>
-            {% for error in form.username.errors %}
-                <label class="text-danger" for="floatingInputInvalid"> {{ error }}</label>
-            {% endfor %}
-        </div>
-        
-        <div class="form-floating mb-3 col-md-4">
-            {{ form.password1 }}
-            <label for="{{ form.password1.id_for_label }}">Password:</label>
-            {% for error in form.password1.errors %}
-                <label class="text-danger" for="floatingInputInvalid"> {{ error }}</label>
-            {% endfor %}
-        </div>
-        
-        <div class="form-floating mb-3 col-md-4">
-            {{ form.password2 }}
-            <label for="{{ form.password2.id_for_label }}">Confirm:</label>
+  <h2>Sign Up</h2>
+  <form method="post" action="{% url 'users:signup' %}">
+    {% csrf_token %}
 
-            {% for error in form.password2.errors %}
-                <label class="text-danger" for="floatingInputInvalid"> {{ error }}</label>
-            {% endfor %}
+    <div class="form-floating mb-3 col-md-4">
+      {{ form.username }}
+      <label for="{{ form.username.id_for_label }}">Username:</label>
+      {% for error in form.username.errors %}
+      <label class="text-danger" for="floatingInputInvalid"> {{ error }}</label>
+      {% endfor %}
+    </div>
 
-        </div>
-        <div class="d-grid gap-2 col-md-4">
-            <button type="submit" class="btn btn-outline-primary">Submit</button>
-            <button type="reset" class="btn btn-outline-warning">Reset</button>
-        </div>
-    </form>
+    <div class="form-floating mb-3 col-md-4">
+      {{ form.password1 }}
+      <label for="{{ form.password1.id_for_label }}">Password:</label>
+      {% for error in form.password1.errors %}
+      <label class="text-danger" for="floatingInputInvalid"> {{ error }}</label>
+      {% endfor %}
+    </div>
+
+    <div class="form-floating mb-3 col-md-4">
+      {{ form.password2 }}
+      <label for="{{ form.password2.id_for_label }}">Confirm:</label>
+
+      {% for error in form.password2.errors %}
+      <label class="text-danger" for="floatingInputInvalid"> {{ error }}</label>
+      {% endfor %}
+    </div>
+    <div class="d-grid gap-2 col-md-4">
+      <button type="submit" class="btn btn-outline-primary">Submit</button>
+      <button type="reset" class="btn btn-outline-warning">Reset</button>
+    </div>
+  </form>
 </div>
 
 {% endblock %}
