--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -35,6 +35,10 @@
             <button type="submit" class="btn btn-outline-primary">Submit</button>
             <button type="reset" class="btn btn-outline-warning">Reset</button>
         </div>
+
+        <div class="small text-center col-md-4">
+            <a href="{% url "users:password_reset" %}" class="text-center"><i>Forgot Password?</i></a>
+        </div>
     </form>
 </div>
 
