--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -15,6 +15,14 @@
                 <label class="text-danger" for="floatingInputInvalid"> {{ error }}</label>
             {% endfor %}
         </div>
+
+        <div class="form-floating mb-3 col-md-4">
+            {{ form.email }}
+            <label for="{{ form.email.id_for_label }}">Email:</label>
+            {% for error in form.email.errors %}
+                <label class="text-danger" for="floatingInputInvalid"> {{ error }}</label>
+            {% endfor %}
+        </div>
         
         <div class="form-floating mb-3 col-md-4">
             {{ form.password1 }}
